# smisdr

./: Makefile  README.md  build_smi_sinus.sh  build_smi_tcp_streamig_dac.sh  config.txt  smi_sinus.c  smi_tcp_streaming_dac.c  smi_util.c  tcp_test.py
PoC/: IQ2RF_test.cpp
gateware/: README.md
gateware/DUC/: Makefile  README.md  baseband_sharpener.v  cic_interpolator.v  debouncer.v  duc_mixer.v  duc_top.v  gen_lut.py  generate_fir.py  multirate_upsampler.v  nco_dual.v  shared_sine_rom.v  sim_main.cpp  sin_quarter.hex  sin_table.hex  smi_rx_16bit.v  sync_fifo.v
gateware/DUC/testsignals/: cohi_real_files_content.txt  cohi_wav_to_smi_iq.py  gen_testsignal_1250ksps.py  gen_testsignal_250ksps.py  gen_testsignal_500ksps.py  testsignal_1250ksps_spectrum.py  testsignal_250ksps_ci16.iq  testsignal_250ksps_spectrum.py  testsignal_500ksps_ci16.iq  testsignal_500ksps_spectrum.py
gateware/gr-smisdr/: CMakeLists.txt  README.md
gateware/gr-smisdr/examples/: loopback.grc  loopback_example.py  smisdr_sim.grc
gateware/gr-smisdr/grc/: CMakeLists.txt  smisdr_decoder.block.yml  smisdr_encoder.block.yml
gateware/gr-smisdr/include/gnuradio/smisdr/: CMakeLists.txt  api.h  decoder.h  encoder.h
gateware/gr-smisdr/lib/: CMakeLists.txt  decoder_impl.cc  decoder_impl.h  encoder_impl.cc  encoder_impl.h
gateware/gr-smisdr/python/smisdr/: CMakeLists.txt  __init__.py
gateware/gr-smisdr/python/smisdr/bindings/: CMakeLists.txt  decoder_python.cc  encoder_python.cc  python_bindings.cc
grc/: smisdr_control.grc
